--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
-    "puppeteer-core": "^21.11.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "puppeteer": "^21.0.0" 
   }
 }
