--- a/package.json
+++ b/package.json
@@ -1,9 +1,6 @@
 {
-  "name": "replit-keeper",
-  "version": "1.0.0",
-  "main": "index.js",
   "dependencies": {
     "express": "^4.18.2",
-    "puppeteer": "^21.0.0" 
+    "puppeteer-core": "^21.0.0"
   }
 }
