--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
+  "name": "replit-keeper",
+  "version": "1.0.0",
+  "main": "index.js",
   "dependencies": {
-    "express": "^4.18.2",
-    "puppeteer-core": "^21.0.0"
+    "puppeteer-core": "^21.11.0",
+    "express": "^4.18.2"
   }
 }
